# python

.github/workflows/: github-ai-tracker.yml
document-processor/: .env.example  .gitignore  DEVELOPMENT_LOG.md  README.md  SETUP_GUIDE.md  app.py  config.py  requirements.txt
document-processor/_deprecated_files/: AUTH_FIX.md  error.txt  gemini_response_debug.txt  list_models.py  main.py  minimal_test.py  simple_test.py  simulate_fix_test.py  start.sh  test_attachment_fix.py  test_credential_management.py  test_fix.py  test_google_integration.py  test_quick.py  test_system.py  使用手冊.md  部署說明.md  錯誤訊息.txt
document-processor/modules/: __init__.py  document_processor.py  file_manager.py  gemini_analyzer.py  (+1 more)
github-ai-tracker/: .env.example  .gitignore  DEVLOG.md  README.md  SPEC.md  pyproject.toml
github-ai-tracker/.github/workflows/: crawler.yml
github-ai-tracker/src/: __init__.py  config.py  main.py
github-ai-tracker/src/clients/: __init__.py  github_client.py  notion_sync.py
github-ai-tracker/src/models/: __init__.py  repository.py
github-ai-tracker/src/utils/: __init__.py  logger.py
github-ai-tracker/tests/: __init__.py  test_config.py  test_models.py
webcrawler1/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.command
webcrawler1/ai_pulse_monitor/: __init__.py  database.py  main.py  summarizer.py  utils.py
webcrawler1/ai_pulse_monitor/scrapers/: __init__.py  huggingface_blog.py  the_decoder.py  tldr_ai.py
workflow/: .gitignore  DEVLOG.md  README.md  start.bat  start.sh  workspace_manager.py  workspaces.json  啟動工作區管理器.command
(+2 files in other folders)
